[tool.poetry]
name = "python.cz"
version = "0.1.0"
description = ""
authors = ["Pyvec"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
elsa = ">=0.1.6"
flask = ">=3.0.3"
frozen-flask = ">=1.0.2"
requests = ">=2.31.0"
czech-sort = ">=1.1.0"
PyYAML = ">=6.0.1"
python-slugify = ">=8.0.4"
ics = ">=0.7.2"
arrow = ">=1.3.0"
lxml = ">=5.2.1"
cssselect = ">=1.2.0"
cachelib = ">=0.13.0"

[tool.poetry.dev-dependencies]
pytest = ">=8.1.2"
pytest-cov = ">=5.0.0"
responses = ">=0.25.0"

[tool.poetry.group.deployment]
optional = true

[tool.poetry.group.deployment.dependencies]
gunicorn = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
